--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,12 @@
         <slf4j.version>1.6.1</slf4j.version>
         <aspectj.version>1.6.10</aspectj.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <gae.version>1.4.0</gae.version>
-        <gae-test.version>1.4.0</gae-test.version>
+        <gae.version>1.3.7</gae.version>
+        <gae-test.version>1.3.7</gae-test.version>
         <gae.home>
             ${user.home}/.m2/repository/com/google/appengine/appengine-java-sdk/${gae.version}/appengine-java-sdk-${gae.version}
         </gae.home>
-        <datanucleus.version>1.1.5</datanucleus.version>
+        <datanucleus.version>1.1.4</datanucleus.version>
     </properties>
     <repositories>
         <repository>
@@ -121,18 +121,13 @@
         <dependency>
             <groupId>javax.jdo</groupId>
             <artifactId>jdo2-api</artifactId>
-            <version>2.3-ec</version>
+            <version>2.3-ea</version>
             <exclusions>
                 <exclusion>
                     <groupId>javax.transaction</groupId>
                     <artifactId>transaction-api</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>net.sf.flexjson</groupId>
-            <artifactId>flexjson</artifactId>
-            <version>2.0</version>
         </dependency>
         <dependency>
             <groupId>org.tuckey</groupId>
@@ -208,7 +203,7 @@
         <dependency>
             <groupId>com.google.appengine.orm</groupId>
             <artifactId>datanucleus-appengine</artifactId>
-            <version>1.0.7.final</version>
+            <version>1.0.4.1</version>
         </dependency>
         <dependency>
             <groupId>com.google.appengine</groupId>
@@ -259,12 +254,6 @@
             <groupId>org.datanucleus</groupId>
             <artifactId>datanucleus-rdbms</artifactId>
             <version>${datanucleus.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.datanucleus</groupId>
-            <artifactId>datanucleus-enhancer</artifactId>
-            <version>1.1.4</version>
-            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>javax.jdo</groupId>
